@@ -428,6 +428,12 @@ HTTPConnection Objects
    debug level is ``0``, meaning no debugging output is printed.
 
 
+.. method:: HTTPConnection.set_tunnel(host,port=None)
+
+   Set the host and the port for HTTP Connect Tunnelling. Normally used when
+   it is required to do HTTPS Conection through a proxy server.
+
+
 .. method:: HTTPConnection.connect()
 
    Connect to the server specified when the object was created.
